PROJECT(target_sw_lib)

SET(TEMPLATE
    "ml_interface"
    CACHE STRING "Specify which template to use."
)
SET_PROPERTY(CACHE TEMPLATE PROPERTY STRINGS ml_interface taclebench embench example)

ADD_SUBDIRECTORY(support)
ADD_SUBDIRECTORY(${TEMPLATE})

SET(TARGET_LIB_SOURCE targets/${TARGET_SYSTEM}.c)
IF(NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${TARGET_LIB_SOURCE})
    SET(TARGET_LIB_SOURCE targets/default.c)
ENDIF()

COMMON_ADD_LIBRARY(${PROJECT_NAME} STATIC drivers/fake_input.c ${TARGET_LIB_SOURCE})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC lib/drivers lib/targets)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC .)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC support ${TEMPLATE})
