PROJECT(mlonmcu_support)

SET(TEMPLATE
    "ml_interface"
    CACHE STRING "Specify which template to use."
)
SET_PROPERTY(CACHE TEMPLATE PROPERTY STRINGS ml_interface taclebench embench example)
SET(TEMPLATE_DIR
    ""
    CACHE STRING "Specify which template to use."
)

ADD_SUBDIRECTORY(support)
ADD_SUBDIRECTORY(targets)
ADD_SUBDIRECTORY(bench)

IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${TEMPLATE})
    ADD_SUBDIRECTORY(${TEMPLATE})
ELSEIF(EXISTS ${TEMPLATE_DIR})
    ADD_SUBDIRECTORY(${TEMPLATE_DIR} ${TEMPLATE})
ELSE()
    MESSAGE(FATAL_ERROR "Specified template ${TEMPLATE} not found in ${TEMPLATE_DIR}")
ENDIF()

COMMON_ADD_LIBRARY(${PROJECT_NAME} STATIC drivers/fake_input.c)
# TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC lib/drivers)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC .)
# TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE support target_support ${TEMPLATE})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${TEMPLATE})
