PROJECT(ara_apps)

SET(ARA_APP
    ""
    CACHE STRING "Specify which app to run."
)
# SET_PROPERTY(CACHE ARA_APP PROPERTY STRINGS TODO)
SET(ARA_NR_LANES
    "2"
    CACHE STRING "Specify number of lanes."
)

IF(NOT ARA_APP)
    MESSAGE(FATAL_ERROR "Undefined: ARA_APP")
ENDIF()

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(${ARA_APP})

# FILE(GLOB BENCH_SRCS test.c)
#
COMMON_ADD_LIBRARY(${PROJECT_NAME} STATIC ara_apps.c)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC .)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${ARA_APP})
# TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PUBLIC -DSIZE=${MATHIS_SIZE} -DNARGS=${MATHIS_NARGS} -DFUNCTION=${MATHIS_TEST} -DELEM_SIZE=${MATHIS_ELEM_SIZE} -DN=${MATHIS_N})

TARGET_INCLUDE_DIRECTORIES(${ARA_APP} PUBLIC common)
TARGET_LINK_LIBRARIES(${ARA_APP} PUBLIC ara_common)
TARGET_COMPILE_DEFINITIONS(${ARA_APP} PUBLIC -DNR_LANES=${ARA_NR_LANES})
