# TODO: make CMSIS-DSP feature
SET(CMSIS_DSP_DIR /home/ga87puy/src/CMSIS-DSP)  # TODO: expose
ADD_SUBDIRECTORY(${CMSIS_DSP_DIR}/Source cmsis_dsp)

TARGET_COMPILE_DEFINITIONS(CMSISDSP PUBLIC __GNUC_PYTHON__)  # TODO: expose

IF(${GLOBAL_ISEL})
target_compile_options(CMSISDSP PRIVATE "SHELL:$<$<COMPILE_LANGUAGE:C>:-mllvm -global-isel=1>")
target_compile_options(CMSISDSP PRIVATE "SHELL:$<$<COMPILE_LANGUAGE:CXX>:-mllvm -global-isel=1>")
SET(GLOBAL_ISEL_ABORT 2)
target_compile_options(CMSISDSP PRIVATE "SHELL:$<$<COMPILE_LANGUAGE:C>:-mllvm -global-isel-abort=${GLOBAL_ISEL_ABORT}>")
target_compile_options(CMSISDSP PRIVATE "SHELL:$<$<COMPILE_LANGUAGE:CXX>:-mllvm -global-isel-abort=${GLOBAL_ISEL_ABORT}>")
ENDIF()

PROJECT(cmsis_dsp_bench)

SET(CMSIS_DSP_BENCHMARK
    ""
    CACHE STRING "Specify which benchmark to run."
)
# SET_PROPERTY(CACHE EMBENCH_BENCHMARK PROPERTY STRINGS TODO)
SET(CMSIS_DSP_SIZE
    "16"
    CACHE STRING "Specify size of arrays."
)
SET(CMSIS_DSP_BATCH_SIZE
    "16"
    CACHE STRING "Specify size of arrays."
)
SET(CMSIS_DSP_NUMBER
    "10"
    CACHE STRING "Specify size of arrays."
)

IF(NOT CMSIS_DSP_BENCHMARK)
    MESSAGE(FATAL_ERROR "Undefined: CMSIS_DSP_BENCHMARK")
ENDIF()

FILE(GLOB BENCH_SRCS bench_${CMSIS_DSP_BENCHMARK}.c)

COMMON_ADD_LIBRARY(${PROJECT_NAME} STATIC ${BENCH_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC m support)
TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PUBLIC NUMBER=${CMSIS_DSP_NUMBER} SIZE=${CMSIS_DSP_SIZE} BATCH=${CMSIS_DSP_BATCH_SIZE} __GNUC_PYTHON__)  # TODO: expose


TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${CMSIS_DSP_DIR}/Include)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC CMSISDSP)

IF(${GLOBAL_ISEL})
target_compile_options(${PROJECT_NAME} PRIVATE "SHELL:$<$<COMPILE_LANGUAGE:C>:-mllvm -global-isel=1>")
target_compile_options(${PROJECT_NAME} PRIVATE "SHELL:$<$<COMPILE_LANGUAGE:CXX>:-mllvm -global-isel=1>")
SET(GLOBAL_ISEL_ABORT 2)
target_compile_options(${PROJECT_NAME} PRIVATE "SHELL:$<$<COMPILE_LANGUAGE:C>:-mllvm -global-isel-abort=${GLOBAL_ISEL_ABORT}>")
target_compile_options(${PROJECT_NAME} PRIVATE "SHELL:$<$<COMPILE_LANGUAGE:CXX>:-mllvm -global-isel-abort=${GLOBAL_ISEL_ABORT}>")
ENDIF()
