PROJECT(embench_iot)

SET(EMBENCH_IOT_DIR
    ""
    CACHE PATH "embench source directory"
)

IF(NOT EMBENCH_IOT_DIR)
    MESSAGE(FATAL_ERROR "Undefined: EMBENCH_IOT_DIR")
ENDIF()

SET(EMBENCH_IOT_BENCHMARK
    ""
    CACHE STRING "Specify which benchmark to run."
)
# SET_PROPERTY(CACHE EMBENCH_BENCHMARK PROPERTY STRINGS TODO)

SET(EMBENCH_IOT_GLOBAL_SCALE_FACTOR
    "1"
    CACHE STRING "Multiplier for number of iterations."
)

IF(NOT EMBENCH_IOT_BENCHMARK)
    MESSAGE(FATAL_ERROR "Undefined: EMBENCH_IOT_BENCHMARK")
ENDIF()

SET(BENCH_DIR ${EMBENCH_IOT_DIR}/src/${EMBENCH_IOT_BENCHMARK})
FILE(GLOB BENCH_SRCS ${BENCH_DIR}/*.c)

COMMON_ADD_LIBRARY(${PROJECT_NAME} STATIC embench_iot.c ${EMBENCH_IOT_DIR}/support/beebsc.c ${BENCH_SRCS})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC . ${BENCH_DIR} ${EMBENCH_IOT_DIR}/support)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC m support)
TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PUBLIC WARMUP_HEAT=0 CPU_MHZ=1 GLOBAL_SCALE_FACTOR=${EMBENCH_IOT_GLOBAL_SCALE_FACTOR})

IF(${GLOBAL_ISEL})
target_compile_options(${PROJECT_NAME} PRIVATE "SHELL:$<$<COMPILE_LANGUAGE:C>:-mllvm -global-isel=1>")
target_compile_options(${PROJECT_NAME} PRIVATE "SHELL:$<$<COMPILE_LANGUAGE:CXX>:-mllvm -global-isel=1>")
SET(GLOBAL_ISEL_ABORT 2)
target_compile_options(${PROJECT_NAME} PRIVATE "SHELL:$<$<COMPILE_LANGUAGE:C>:-mllvm -global-isel-abort=${GLOBAL_ISEL_ABORT}>")
target_compile_options(${PROJECT_NAME} PRIVATE "SHELL:$<$<COMPILE_LANGUAGE:CXX>:-mllvm -global-isel-abort=${GLOBAL_ISEL_ABORT}>")
ENDIF()
