PROJECT(example)

SET(EXAMPLE_BENCHMARK
    ""
    CACHE STRING "Specify which benchmark to run."
)
# SET_PROPERTY(CACHE TACLEBENCH_BENCHMARK PROPERTY STRINGS TODO)

IF(NOT EXAMPLE_BENCHMARK)
    MESSAGE(FATAL_ERROR "Undefined: EXAMPLE_BENCHMARK")
ENDIF()

# TODO: subdirs!
COMMON_ADD_LIBRARY(${PROJECT_NAME} STATIC ${EXAMPLE_BENCHMARK}.c)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC .)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE support)

IF(${GLOBAL_ISEL})
target_compile_options(${PROJECT_NAME} PRIVATE "SHELL:$<$<COMPILE_LANGUAGE:C>:-mllvm -global-isel=1>")
target_compile_options(${PROJECT_NAME} PRIVATE "SHELL:$<$<COMPILE_LANGUAGE:CXX>:-mllvm -global-isel=1>")
SET(GLOBAL_ISEL_ABORT 2)
target_compile_options(${PROJECT_NAME} PRIVATE "SHELL:$<$<COMPILE_LANGUAGE:C>:-mllvm -global-isel-abort=${GLOBAL_ISEL_ABORT}>")
target_compile_options(${PROJECT_NAME} PRIVATE "SHELL:$<$<COMPILE_LANGUAGE:CXX>:-mllvm -global-isel-abort=${GLOBAL_ISEL_ABORT}>")
ENDIF()
