PROJECT(mathis)

SET(MATHIS_TEST
    ""
    CACHE STRING "Specify which test to run."
)
# SET_PROPERTY(CACHE MATHIS_TEST PROPERTY STRINGS TODO)

IF(NOT MATHIS_TEST)
    MESSAGE(FATAL_ERROR "Undefined: MATHIS_TEST")
ENDIF()

SET(MATHIS_SIZE
    "1024"
    CACHE STRING "Specify size of arrays."
)
SET(MATHIS_NARGS
    "1024"
    CACHE STRING "Specify number of args (has to match selected function)."
)
SET(MATHIS_ELEM_SZIE
    "8"
    CACHE STRING "Specify number of bits (has to match selected function)."
)

FILE(GLOB BENCH_SRCS test.c)

COMMON_ADD_LIBRARY(${PROJECT_NAME} STATIC mathis.c ${BENCH_SRCS})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC .)
# TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC m)
TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PUBLIC -DSIZE=${MATHIS_SIZE} -DNARGS=${MATHIS_NARGS} -DFUNCTION=${MATHIS_TEST} -DELEM_SIZE=${MATHIS_ELEM_SIZE})
