PROJECT(mibench)

SET(MIBENCH_DIR
    ""
    CACHE PATH "mibench source directory"
)

IF(NOT MIBENCH_DIRA)
    MESSAGE(FATAL_ERROR "Undefined: MIBENCH_DIR")
ENDIF()

SET(MIBENCH_BENCHMARK
    ""
    CACHE STRING "Specify which benchmark to run."
)
# SET_PROPERTY(CACHE TACLEBENCH_MIBENCH PROPERTY STRINGS TODO)

IF(NOT MIBENCH_BENCHMARK)
    MESSAGE(FATAL_ERROR "Undefined: MIBENCH_BENCHMARK")
ENDIF()

SET(BENCH_DIR ${MIBENCH_DIR}/${MIBENCH_BENCHMARK})
FILE(GLOB BENCH_SRCS ${BENCH_DIR}/*.c)

COMMON_ADD_LIBRARY(${PROJECT_NAME} STATIC ${BENCH_SRCS})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC . ${BENCH_DIR})
# TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC m)
# TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PUBLIC WARMUP_HEAT=0 CPU_MHZ=1)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_BINARY_DIR}")
CONFIGURE_FILE(mibench_wrapper.h.in ${CMAKE_CURRENT_BINARY_DIR}/mibench_wrapper.h @ONLY)
